arranged data structure

--- a/data_analysis/chen_initial_analysis.ipynb
+++ b/data_analysis/chen_initial_analysis.ipynb
@@ -15,56 +15,9 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# load in data\n",
-    "data_path='../data_extraction/data/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "data_path='../data_extraction/data/'\n",
+    "\n",
     "cohort = pd.read_table(data_path+'cohort.tsv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# numerical variable summaries\n",
-    "#print(cohort[['age','los','max_lactate','vaso_frac']].describe())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "icustay = 202634 # empty weight\n",
-    "patientweight = cohort.loc[cohort['icustay_id'] == icustay]['weight']\n",
-    "#patientweight.isnan\n",
-    "type(patientweight)\n",
-    "patientweight.values[0]\n",
-    "if np.isnan(patientweight.values[0]):\n",
-    "    print('yes')\n"
    ]
   },
   {
@@ -79,16 +32,19 @@
     "\n",
     "urine = pd.read_csv(data_path+'urine.csv')\n",
     "\n",
-    "#urine['four_hour_block'] = pd.Series((urine.min_from_intime/interval).astype(int), index=maps.index)\n",
     "\n",
     "icustays = np.unique(urine['icustay_id'])\n",
     "\n",
-    "# For each icustay key, a list of: [array of urine output volumes in 4h windows, starting time of windows, AKI window indices]  \n",
+    "# For each icustay key, the array of urine output volumes in 4h windows\n",
     "urine_4h = {}\n",
-    "# Binary outcome of aki or not for each icustay. \n",
-    "aki_urine ={} #np.zeros(len(icustays)) \n",
+    "# Binary outcome of aki or not for each icustay, and starting time of 4h window aki was identified in  \n",
+    "aki_urine = np.zeros([len(icustays), 3], dtype='int') \n",
     "\n",
-    "for icustay in icustays:\n",
+    "\n",
+    "for icuind in range(0, len(icustays)):\n",
+    "    icustay = icustays[icuind]\n",
+    "    aki_urine[icuind,0]=icustay\n",
+    "    \n",
     "    # Get all the urine values and times for the icustay_id \n",
     "    u= np.array(urine.loc[urine['icustay_id'] == icustay]['value']) \n",
     "    t = np.array(urine.loc[urine['icustay_id'] == icustay]['min_from_intime'])\n",
@@ -132,26 +88,21 @@
     "            \n",
     "    # Whether the urine block meets the I criteria\n",
     "    urine_blocks_I = urine_blocks < (2 * patientweight)      \n",
-    "    print(urine_blocks)\n",
-    "    print('patient weight: ', patientweight)\n",
-    "    print('patient weight*2: ', 2*patientweight)\n",
-    "    print(urine_blocks_I)\n",
     "        \n",
-    "    \n",
     "    # Find 3 consecutive 4h blocks that satisfy the I kidney injury criteria   \n",
-    "    aki_urine[icustay]=0\n",
+    "    aki_urine[icuind, 1]=0\n",
     "    b=0\n",
-    "    first_aki_block=[]\n",
-    "    while (b<nblocks-2) & (aki_urine[icustay]==0):\n",
+    "    while (b<nblocks-2) & (aki_urine[icuind, 1] == 0):\n",
     "        if np.array_equal(urine_blocks_I[b:(b+3)], [True, True, True]):\n",
-    "            aki_urine[icustay]=1\n",
-    "            first_aki_block=b\n",
-    "            print('got one')\n",
+    "            aki_urine[icuind, 1]=1\n",
+    "            # The starting time of the aki onset window\n",
+    "            aki_urine[icuind, 2] = int(b*240+t0)\n",
     "        b+=1\n",
     "    \n",
-    "    urine_4h[icustay]=[urine_blocks, t0, first_aki_block]\n",
+    "    urine_4h[icustay]=urine_blocks\n",
+    "\n",
     "    \n",
-    "    raw_input(\"Press Enter\\n\\n\\n\")\n",
+    "aki_urine = pd.DataFrame(aki_urine, columns=['icustay_id', 'aki_result', 'aki_onset_t'])\n",
     "                "
    ]
   },
@@ -163,151 +114,6 @@
    },
    "outputs": [],
    "source": [
-    "urine_blocks[8]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "urine_4h"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#urine_4h\n",
-    "aki_urine"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#[250, 500, 719]\n",
-    "#[240, 480, 480]\n",
-    "\n",
-    "x=720\n",
-    "int(x/240)*240\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# convert raw MAP readings to MAP features\n",
-    "maps = pd.read_csv(data_path+'map.csv')\n",
-    "interval = 60\n",
-    "\n",
-    "# average MAP for every hour\n",
-    "maps['hour'] = pd.Series((maps.min_from_intime/interval).astype(int), index=maps.index)\n",
-    "\n",
-    "# get means for every hour with data present. \n",
-    "mean_maps = maps.groupby(['icustay_id', 'hour'])['value'].mean()\n",
-    "mean_maps = mean_maps.to_frame().reset_index().set_index(['icustay_id'])\n",
-    "\n",
-    "\n",
-    "# interpolate MAPs for missing hours\n",
-    "\n",
-    "# For each icustay, \n",
-    "min_hours = mean_maps.groupby([mean_maps.index.get_level_values(0)])['hour'].min()\n",
-    "max_hours = mean_maps.groupby([mean_maps.index.get_level_values(0)])['hour'].max()\n",
-    "\n",
-    "interp_index = []\n",
-    "for this_icustay in min_hours.index:\n",
-    "    min_hour = min_hours.loc[this_icustay]\n",
-    "    max_hour = max_hours.loc[this_icustay]\n",
-    "    test =[hour for hour in np.arange(min_hour,max_hour+1)]\n",
-    "    interp_index += [(this_icustay, hour) for hour in np.arange(min_hour,max_hour+1)]\n",
-    "\n",
-    "mean_maps = mean_maps.set_index(['hour'],append=True)\n",
-    "interp_mean_maps = mean_maps.reindex(pd.MultiIndex.from_tuples(interp_index,names=['icustay_id','hour']))\n",
-    "interp_mean_maps = interp_mean_maps['value'].interpolate(method='linear')\n",
-    "interp_mean_maps = interp_mean_maps.to_frame().reset_index()\n",
-    "\n",
-    "# get percent of hours missing a MAP value\n",
-    "missing_map = len(interp_mean_maps.index) - len(mean_maps.index)\n",
-    "\n",
-    "frac_missing = missing_map/float(len(interp_mean_maps.index))\n",
-    "print(\"Fraction of hours missing MAP values:\", frac_missing)\n",
-    "\n",
-    "# get minimum MAP value per patient\n",
-    "min_ind = interp_mean_maps.groupby('icustay_id')['value'].idxmin(skipna=True)\n",
-    "min_maps = interp_mean_maps.loc[min_ind]\n",
-    "\n",
-    "# bin MAP values for first 72 hours\n",
-    "map_72 = interp_mean_maps.loc[interp_mean_maps['hour']<72]\n",
-    "\n",
-    "map_cutoffs = np.append(np.arange(30,100,10),200)\n",
-    "map_72['bins'] = pd.cut(map_72['value'], map_cutoffs)\n",
-    "binned_min_maps = pd.cut(min_maps['value'], map_cutoffs)\n",
-    "\n",
-    "map_fracs = map_72.groupby('icustay_id')['bins'].value_counts(normalize=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "urine"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "maps.head"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "area=np.trapz([0,1,1], [0, 1.2, 5])\n",
-    "area"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "t=np.array([0,1,2,3])\n",
-    "u=np.array([0,1,2,1])\n",
-    "dt=np.diff(t)\n",
-    "print(dt)\n",
     "\n"
    ]
   },
@@ -319,19 +125,8 @@
    },
    "outputs": [],
    "source": [
-    "area=np.dot(dt, u[1:])\n",
-    "area"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "a={20003: ['jack', [1,2,3]], 20002:['jill', [9,9]] }"
+    "# The aki results of each icustay\n",
+    "aki_urine"
    ]
   },
   {
@@ -341,7 +136,10 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# The 4 hour urine volumes (in a dictionary)\n",
+    "urine_4h"
+   ]
   },
   {
    "cell_type": "code",
