--- a/data_analysis/chen_initial_analysis.ipynb
+++ b/data_analysis/chen_initial_analysis.ipynb
@@ -99,10 +99,12 @@
     "            aki_urine[icuind, 2] = int(b*240+t0)\n",
     "        b+=1\n",
     "    \n",
+    "    #  ----------  Save the urine volumes. COMMENT THIS OUT IF YOU DON'T NEED. very slow ------------- #   \n",
     "    urine_4h[icustay]=urine_blocks\n",
-    "\n",
     "    \n",
-    "aki_urine = pd.DataFrame(aki_urine, columns=['icustay_id', 'aki_result', 'aki_onset_t'])\n",
+    "    \n",
+    "# Convert to pandas dataframe\n",
+    "aki_urine_frame = pd.DataFrame(aki_urine[:,1:], index=aki_urine[:,0], columns=['aki_result', 'aki_onset_t'])\n",
     "                "
    ]
   },
@@ -114,19 +116,8 @@
    },
    "outputs": [],
    "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
     "# The aki results of each icustay\n",
-    "aki_urine"
+    "aki_urine_frame"
    ]
   },
   {
