aki with both urine and creatinine

--- a/data_analysis/chen_initial_analysis.ipynb
+++ b/data_analysis/chen_initial_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -16,23 +16,100 @@
     "import matplotlib.pyplot as plt\n",
     "import statsmodels.api as sm\n",
     "\n",
+    "from process import interpolateweights, calculateurineblocks\n",
+    "\n",
     "# load in data\n",
     "data_path='../data_extraction/data/'\n",
-    "cohort = pd.read_table(data_path+'cohort.tsv')"
+    "cohort = pd.read_table(data_path+'cohort.tsv')\n",
+    "cohort.set_index('icustay_id', inplace=True)\n",
+    "cohort.ix[cohort.age > 90, 'age']=90\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "icustay_id\n",
+       "254478     74.000000\n",
+       "241249    106.200000\n",
+       "237024     66.000000\n",
+       "261027     75.000000\n",
+       "213450     53.800000\n",
+       "233111     66.500000\n",
+       "254245     56.700000\n",
+       "232514     94.000000\n",
+       "296584    112.800000\n",
+       "223465     61.200000\n",
+       "260696    112.000000\n",
+       "264885     63.000000\n",
+       "218740     75.000000\n",
+       "231756     70.600000\n",
+       "255303     75.400000\n",
+       "288571     62.000000\n",
+       "285726     72.600000\n",
+       "291941    104.000000\n",
+       "244420     61.900000\n",
+       "247500     65.900000\n",
+       "231395     69.300000\n",
+       "255617     78.000000\n",
+       "239979     91.300000\n",
+       "242685     63.200000\n",
+       "205951     51.200000\n",
+       "206613     69.000000\n",
+       "219649     82.000000\n",
+       "231490    100.200000\n",
+       "238023     82.000000\n",
+       "260225     60.000000\n",
+       "             ...    \n",
+       "271622     58.000000\n",
+       "215979     54.400000\n",
+       "200063    131.800000\n",
+       "266170     99.700000\n",
+       "269996     70.000000\n",
+       "274991     55.700000\n",
+       "217827     91.900000\n",
+       "260550     80.000000\n",
+       "253534     88.000000\n",
+       "200916     66.800000\n",
+       "205873     71.900000\n",
+       "201433     99.500000\n",
+       "224436     93.000000\n",
+       "209909    115.000000\n",
+       "211938     57.000000\n",
+       "277618     76.000000\n",
+       "267848     55.000000\n",
+       "216203     62.700000\n",
+       "279848     59.000000\n",
+       "279885     89.600000\n",
+       "298177     65.900000\n",
+       "283925     54.000000\n",
+       "224964     66.300000\n",
+       "262109    124.800000\n",
+       "236983     82.457375\n",
+       "267661     65.900000\n",
+       "297672     74.000000\n",
+       "211489    100.000000\n",
+       "216757    120.600000\n",
+       "279638     71.000000\n",
+       "Name: weight, dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#weightcovariates\n",
-    "#help(model_with_height.predict)\n",
-    "#df.ix[df.my_channel > 20000, 'my_channel'] = 0\n",
-    "#cohort.ix[cohort.index == 254478, 'weight']"
+    "cohort = interpolateweights(cohort)\n",
+    "\n",
+    "cohort['weight']\n",
+    "\n"
    ]
   },
   {
