--- a/data_analysis/initial_analysis.ipynb
+++ b/data_analysis/initial_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -135,6 +135,28 @@
     "eth = eth.cat.remove_unused_categories()\n",
     "\n",
     "print pd.value_counts(eth.values,normalize=True,sort=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eth"
    ]
   },
   {
@@ -476,22 +498,7 @@
     }
    ],
    "source": [
-    "# get summaries of each dataset\n",
-    "def get_summary(dataset):\n",
-    "    print dataset[['age','los','max_lactate','vaso_frac','min_map']].describe()\n",
-    "    print \"\"\n",
-    "    \n",
-    "    print \"gender:\"\n",
-    "    print pd.value_counts(dataset['gender'].values)\n",
-    "    print \"\"\n",
-    "    print pd.value_counts(dataset['gender'].values,normalize=True)\n",
-    "    print \"\"\n",
-    "    \n",
-    "    print \"ethnicity:\"\n",
-    "    print pd.value_counts(dataset['eth'].values)\n",
-    "    print \"\"\n",
-    "    print pd.value_counts(dataset['eth'].values,normalize=True)\n",
-    "    print \"\"\n",
+    "# Summarize results\n",
     "\n",
     "#AKI\n",
     "print \"------------------------------- AKI Patients -------------------------------\"\n",
@@ -628,9 +635,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [conda env:python2]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "conda-env-python2-py"
   },
   "language_info": {
    "codemirror_mode": {
