undid accidental edit

--- a/data_analysis/final_analysis.ipynb
+++ b/data_analysis/final_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -81,11 +81,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fraction of hours missing MAP values: 0.0739482307313\n"
+     ]
+    }
+   ],
    "source": [
     "# Get map features \n",
     "mean_maps, min_maps, map_fracs = getmapfeatures(maps)"
@@ -93,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -105,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -148,15 +156,6 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
    "source": [
     "# Look at MAP split between AKI and Non-AKI subsets\n",
     "bins = np.arange(20,80,1)\n",
@@ -177,7 +176,23 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Organize data for logistic regression\n",
+    "train_cols = lr_data[['age','gender','eth','los','max_lactate','vaso_frac','binned_min_map']]\n",
+    "train_cols['gender'] = pd.Categorical(train_cols['gender'])\n",
+    "train_cols['eth'] = pd.Categorical(train_cols['eth'])\n",
+    "\n",
+    "train_cols['gender'] = train_cols.gender.cat.codes\n",
+    "train_cols['eth'] = train_cols.eth.cat.codes\n",
+    "\n",
+    "# Manually add the intercept\n",
+    "train_cols['intercept'] = 1.0\n",
+    "\n",
+    "# Do logistic regression\n",
+    "logit = sm.Logit(lr_data['aki'], train_cols)\n",
+    "result = logit.fit()\n",
+    "print result.summary()"
+   ]
   }
  ],
  "metadata": {
