--- a/data_analysis/initial_analysis.ipynb
+++ b/data_analysis/initial_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 173,
    "metadata": {
     "collapsed": false
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 88,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false
    },
@@ -135,28 +135,6 @@
     "eth = eth.cat.remove_unused_categories()\n",
     "\n",
     "print pd.value_counts(eth.values,normalize=True,sort=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.series.Series"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "eth"
    ]
   },
   {
@@ -498,7 +476,22 @@
     }
    ],
    "source": [
-    "# Summarize results\n",
+    "# get summaries of each dataset\n",
+    "def get_summary(dataset):\n",
+    "    print dataset[['age','los','max_lactate','vaso_frac','min_map']].describe()\n",
+    "    print \"\"\n",
+    "    \n",
+    "    print \"gender:\"\n",
+    "    print pd.value_counts(dataset['gender'].values)\n",
+    "    print \"\"\n",
+    "    print pd.value_counts(dataset['gender'].values,normalize=True)\n",
+    "    print \"\"\n",
+    "    \n",
+    "    print \"ethnicity:\"\n",
+    "    print pd.value_counts(dataset['eth'].values)\n",
+    "    print \"\"\n",
+    "    print pd.value_counts(dataset['eth'].values,normalize=True)\n",
+    "    print \"\"\n",
     "\n",
     "#AKI\n",
     "print \"------------------------------- AKI Patients -------------------------------\"\n",
