Use 90-10 split and seed RNG

--- a/data_analysis/final_analysis.ipynb
+++ b/data_analysis/final_analysis.ipynb
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -404,33 +404,33 @@
      "output_type": "stream",
      "text": [
       "Optimization terminated successfully.\n",
-      "         Current function value: 0.614251\n",
+      "         Current function value: 0.609517\n",
       "         Iterations 6\n",
       "                           Logit Regression Results                           \n",
       "==============================================================================\n",
-      "Dep. Variable:                    aki   No. Observations:                 3759\n",
-      "Model:                          Logit   Df Residuals:                     3746\n",
+      "Dep. Variable:                    aki   No. Observations:                 4178\n",
+      "Model:                          Logit   Df Residuals:                     4165\n",
       "Method:                           MLE   Df Model:                           12\n",
-      "Date:                Fri, 16 Dec 2016   Pseudo R-squ.:                 0.06747\n",
-      "Time:                        09:19:01   Log-Likelihood:                -2309.0\n",
-      "converged:                       True   LL-Null:                       -2476.0\n",
-      "                                        LLR p-value:                 3.095e-64\n",
+      "Date:                Fri, 16 Dec 2016   Pseudo R-squ.:                 0.07487\n",
+      "Time:                        09:26:43   Log-Likelihood:                -2546.6\n",
+      "converged:                       True   LL-Null:                       -2752.7\n",
+      "                                        LLR p-value:                 9.899e-81\n",
       "=====================================================================================================\n",
       "                                        coef    std err          z      P>|z|      [95.0% Conf. Int.]\n",
       "-----------------------------------------------------------------------------------------------------\n",
-      "age                                   0.0145      0.002      6.519      0.000         0.010     0.019\n",
-      "los                                   0.0499      0.005      9.708      0.000         0.040     0.060\n",
-      "max_lactate                           0.0502      0.015      3.323      0.001         0.021     0.080\n",
-      "vaso_frac                             0.2750      0.182      1.507      0.132        -0.083     0.633\n",
-      "min_map                              -0.0246      0.004     -6.032      0.000        -0.033    -0.017\n",
-      "gender_F                              0.0479      0.072      0.665      0.506        -0.093     0.189\n",
-      "eth_AMERICAN INDIAN/ALASKA NATIVE    -0.5337      1.445     -0.369      0.712        -3.366     2.299\n",
-      "eth_ASIAN                            -0.9792      0.226     -4.324      0.000        -1.423    -0.535\n",
-      "eth_BLACK/AFRICAN AMERICAN            0.0091      0.141      0.065      0.949        -0.267     0.285\n",
-      "eth_HISPANIC/LATINO                  -0.0249      0.198     -0.126      0.900        -0.413     0.363\n",
-      "eth_MULTI/OTHER                      -0.1290      0.226     -0.570      0.569        -0.573     0.315\n",
-      "eth_UNKNOWN                          -0.0753      0.112     -0.672      0.502        -0.295     0.144\n",
-      "intercept                             0.1106      0.298      0.371      0.711        -0.474     0.695\n",
+      "age                                   0.0151      0.002      7.241      0.000         0.011     0.019\n",
+      "los                                   0.0489      0.005     10.179      0.000         0.040     0.058\n",
+      "max_lactate                           0.0530      0.015      3.626      0.000         0.024     0.082\n",
+      "vaso_frac                             0.2427      0.174      1.398      0.162        -0.098     0.583\n",
+      "min_map                              -0.0291      0.004     -7.499      0.000        -0.037    -0.022\n",
+      "gender_F                              0.0029      0.069      0.043      0.966        -0.131     0.137\n",
+      "eth_AMERICAN INDIAN/ALASKA NATIVE    -0.5308      1.451     -0.366      0.714        -3.375     2.313\n",
+      "eth_ASIAN                            -0.8780      0.221     -3.971      0.000        -1.311    -0.445\n",
+      "eth_BLACK/AFRICAN AMERICAN            0.0053      0.138      0.038      0.969        -0.265     0.276\n",
+      "eth_HISPANIC/LATINO                  -0.2478      0.183     -1.353      0.176        -0.607     0.111\n",
+      "eth_MULTI/OTHER                      -0.2035      0.212     -0.960      0.337        -0.619     0.212\n",
+      "eth_UNKNOWN                          -0.0949      0.106     -0.893      0.372        -0.303     0.113\n",
+      "intercept                             0.3217      0.282      1.140      0.254        -0.231     0.875\n",
       "=====================================================================================================\n"
      ]
     }
@@ -458,9 +458,9 @@
     "# Manually add the intercept\n",
     "cols['intercept'] = 1.0\n",
     "\n",
-    "# Split 80-20 training test\n",
-    "\n",
-    "msk = np.random.rand(len(lr_data)) < 0.8\n",
+    "# Split 90-10 training test\n",
+    "np.random.seed(0)\n",
+    "msk = np.random.rand(len(lr_data)) < 0.9\n",
     "train_set = cols[msk]\n",
     "test_set = cols[~msk]\n",
     "\n",
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -485,20 +485,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                       2.5%     97.5%        OR\n",
-      "age                                1.010173  1.019003  1.014578\n",
-      "los                                1.040642  1.061827  1.051181\n",
-      "max_lactate                        1.020790  1.083027  1.051448\n",
-      "vaso_frac                          0.920749  1.882428  1.316527\n",
-      "min_map                            0.967981  0.983555  0.975737\n",
-      "gender_F                           0.911034  1.207942  1.049036\n",
-      "eth_AMERICAN INDIAN/ALASKA NATIVE  0.034516  9.964038  0.586449\n",
-      "eth_ASIAN                          0.240975  0.585476  0.375613\n",
-      "eth_BLACK/AFRICAN AMERICAN         0.765963  1.329466  1.009119\n",
-      "eth_HISPANIC/LATINO                0.661564  1.438138  0.975407\n",
-      "eth_MULTI/OTHER                    0.564100  1.369693  0.879002\n",
-      "eth_UNKNOWN                        0.744575  1.155295  0.927472\n",
-      "intercept                          0.622672  2.003643  1.116966\n"
+      "                                       2.5%      97.5%        OR\n",
+      "age                                1.011062   1.019353  1.015199\n",
+      "los                                1.040300   1.060089  1.050148\n",
+      "max_lactate                        1.024666   1.085123  1.054461\n",
+      "vaso_frac                          0.906933   1.791647  1.274717\n",
+      "min_map                            0.963949   0.978729  0.971311\n",
+      "gender_F                           0.876828   1.147179  1.002935\n",
+      "eth_AMERICAN INDIAN/ALASKA NATIVE  0.034230  10.104350  0.588112\n",
+      "eth_ASIAN                          0.269452   0.641088  0.415623\n",
+      "eth_BLACK/AFRICAN AMERICAN         0.766859   1.317936  1.005321\n",
+      "eth_HISPANIC/LATINO                0.545082   1.117627  0.780511\n",
+      "eth_MULTI/OTHER                    0.538609   1.235866  0.815873\n",
+      "eth_UNKNOWN                        0.738482   1.120014  0.909456\n",
+      "intercept                          0.793584   2.398081  1.379521\n"
      ]
     }
    ],
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -522,7 +522,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Area under the ROC curve : 0.729516\n"
+      "Area under the ROC curve : 0.708094\n"
      ]
     }
    ],
